# uv_demo

./: .gitignore  README.md  data_loader.py  hack_spacy.py  hello.py  model_evaluator.py  phenoxtractor.py  processing.py  pyproject.toml  requirements.txt  test_all.py  test_nlp.py  utils.py
reports/: report.qmd
