[project]
name = "uv-demo"
version = "0.1.0"
description = "nrobot - testing out uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pandera>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mkdocs>=1.6.1",
    "mypy>=1.13.0",
    "pandera>=0.21.0",
    "pytest>=8.3.3",
    "rich>=13.9.4",
    "ruff>=0.7.4",
    "seaborn>=0.13.2",
]

