[project]
name = "uv-demo"
version = "0.1.0"
description = "nrobot - testing out uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pandera>=0.21.0",
    "pip>=24.3.1",
    "pytest>=8.3.3",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "spacy>=3.8.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mkdocs>=1.6.1",
    "mpy>=0.1",
    "pandera>=0.21.0",
    "pytest>=8.3.3",
    "rich>=13.9.4",
    "ruff>=0.7.4",
    "seaborn>=0.13.2",
    "spacy>=3.8.2",
]

